# SkyProEducation

./: pyproject.toml
config/: settings.py  urls.py
education/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_remove_subscription_subscribed_and_more.py  0005_alter_lesson_course.py  0006_lesson_update.py  0007_remove_lesson_update_course_update.py  0008_remove_course_update_lesson_update.py
education/templates/education/: base.html  index.html
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_is_paid_payment_session.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_phone_and_more.py  0002_user_role.py  0003_alter_user_is_active_alter_user_last_login.py
